--- a/products.html
+++ b/products.html
@@ -1,306 +1,13 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>جميع منتجات جنة</title>
-<style>
-body { font-family: Tahoma,sans-serif; margin:0; background:#f9f9f9; }
-
-/* الهيدر */
-header {
-  background: #131921;
-  color: white;
-  padding: 15px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-.header-buttons { 
-  margin-top: 10px; 
-  display: flex; 
-  flex-wrap: wrap; 
-  justify-content: center; 
-  gap:5px;
-}
-.header-buttons button {
-  background: #ffd814;
-  border: 1px solid #fcd200;
-  padding: 8px 16px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 16px;
-}
-.header-buttons button:hover { background: #f7ca00; }
-
-/* زر الجرس */
-#notifBtn {
-  position: relative;
-  background: #ff4444;
-  border: 1px solid #cc0000;
-  padding: 8px 16px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: bold;
-  color: #fff;
-  animation: ring 1.5s infinite;
-}
-#notif-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background: yellow;
-  color: black;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
-/* حركة الجرس */
-@keyframes ring {
-  0% { transform: rotate(0deg); }
-  1% { transform: rotate(15deg); }
-  3% { transform: rotate(-10deg); }
-  5% { transform: rotate(15deg); }
-  7% { transform: rotate(-10deg); }
-  9% { transform: rotate(15deg); }
-  11% { transform: rotate(-10deg); }
-  13% { transform: rotate(0deg); }
-  100% { transform: rotate(0deg); }
-}
-
-/* بانر المنتج الجديد */
-#newBanner {
-  display: none;
-  background: red;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-/* عداد السلة */
-#cart-count {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  background: red;
-  color: #fff;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
-/* مربع البحث */
-#searchBox {
-  display: block;
-  margin: 15px auto;
-  padding: 10px;
-  width: 90%;
-  max-width: 400px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-}
-
-/* منتجات على شكل كروت */
-#products-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 15px;
-  padding: 15px;
-}
-.product {
-  background: #fff;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transition: 0.3s;
-}
-.product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
-.product img {
-  width: 100%;
-  height: 150px;
-  object-fit: contain;
-  background: #f9f9f9;
-}
-.product-info {
-  padding: 10px;
-  text-align: center;
-}
-.product-info .name { font-size: 16px; margin-bottom: 5px; color: #333; font-weight: bold; }
-.product-info .price { font-size: 14px; color: #8a2be2; margin-bottom: 8px; }
-.product input {
-  width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
-}
-.product button {
-  padding: 8px 10px;
-  border: none;
-  border-radius: 5px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
-.product button:hover { background: #6a1fbf; transform: scale(1.05); }
-
-/* نافذة إجمالي الفاتورة */
-#totalModal {
-  display: none;
-  position: fixed;
-  top: 50%; left: 50%;
-  transform: translate(-50%,-50%);
-  background: #fff;
-  padding: 20px 25px;
-  border-radius: 15px;
-  box-shadow: 0 5px 20px rgba(0,0,0,0.3);
-  text-align: center;
-  z-index: 1002;
-  width: 90%;
-  max-width: 650px;
-  max-height: 85%;
-  overflow-y: auto;
-  font-size: 16px;
-}
-
-/* جدول الفاتورة */
-#cartList-header {
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr auto;
-  font-weight: bold;
-  margin-bottom: 5px;
-  text-align: center;
-}
-#cartList {
-  text-align: right;
-  margin: 10px 0;
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr auto;
-  gap: 10px;
-  align-items: center;
-  background: #f5f5f5;
-  padding: 10px;
-  border-radius: 10px;
-}
-.cart-item {
-  display: contents;
-}
-.cart-item span {
-  padding: 5px 8px;
-  word-break: break-word;
-}
-.cart-item .remove-btn {
-  background: #ff4444;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 5px 10px;
-  cursor: pointer;
-  margin-top: 5px;
-}
-.cart-item .remove-btn:hover { background: #cc0000; }
-
-/* أزرار الفاتورة */
-#totalModal button {
-  margin: 10px 5px 0 5px;
-  padding: 10px 18px;
-  border: none;
-  border-radius: 10px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 16px;
-  transition: 0.3s;
-}
-#totalModal button:hover { background: #6a1fbf; }
-
-/* Toast */
-#toast {
-  position: fixed;
-  bottom: 20px; right: 20px;
-  background: #25d366;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-  display: none;
-  z-index: 1003;
-}
-
-/* تحسين الموبايل */
-@media (max-width: 600px){
-  #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
-  .product img { height: 120px; }
-  #totalModal { width: 95%; padding: 15px; max-height: 90%; font-size: 14px; }
-  #cartList, #cartList-header { grid-template-columns: 2fr 1fr 1fr 1fr auto; font-size: 14px; }
-  .cart-item span { padding: 3px 5px; }
-  .cart-item .remove-btn { padding: 4px 8px; font-size: 14px; }
-  #totalModal button { font-size: 14px; padding: 8px 12px; }
-}
-</style>
-</head>
-<body>
-
-<header>
-  📦 جميع منتجات جنة
-  <div class="header-buttons">
-    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
-    <button id="totalBtn">💰 إجمالي الفاتورة</button>
-    <button id="supportBtn">☎️ الدعم الفني</button>
-    <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
-    <button id="notifBtn">🔔 صل على الحبيب <span id="notif-count">0</span></button>
-  </div>
-  <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
-</header>
-
-<div id="newBanner">🎉 منتجات جديدة اليوم!</div>
-<div id="products-container"></div>
-
-<div id="totalModal">
-  <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
-
-  <div id="cartList-header">
-    <span>المنتج</span>
-    <span>الكمية</span>
-    <span>السعر</span>
-    <span>الإجمالي</span>
-    <span>حذف</span>
-  </div>
-
-  <div id="cartList"></div>
-
-  <button id="sendBtn">📤 إرسال عبر واتساب</button>
-  <button onclick="closeTotalModal()">❌ إغلاق</button>
-  <div id="orderNumbers" style="margin-top:10px; display:none;">
-    <p>اختر رقم لإرسال الطلب 👇</p>
-    <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
-    <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
-    <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
-  </div>
-</div>
-
-<div id="toast">تمت الإضافة إلى السلة</div>
-
 <script defer>
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
-let cart = [];
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+// حفظ السلة تلقائياً
+function saveCart() {
+  localStorage.setItem("cart", JSON.stringify(cart));
+}
 
 // عرض المنتجات
 function renderProducts(data){
@@ -343,6 +50,7 @@ function showToast(msg){
   setTimeout(()=>toast.style.display="none",1200);
 }
 
+// تحديث عداد السلة ووضعه فوق الزر
 function updateCartCount(){
   const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
   const badge = document.getElementById("cart-count");
@@ -350,15 +58,18 @@ function updateCartCount(){
   badge.innerText = count;
 }
 
+// إضافة منتج للسلة
 function addToCart(index){
   const input = container.querySelector(`input[data-index='${index}']`);
   const quantity = parseInt(input.value);
   if(quantity<=0) return;
   cart[index] = (cart[index] || 0) + quantity;
   updateCartCount();
+  saveCart();
   showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
 }
 
+// عرض إجمالي الفاتورة
 function showTotal(){
   let total=0;
   const cartList=document.getElementById("cartList");
@@ -382,10 +93,27 @@ function showTotal(){
   document.getElementById("totalModal").style.display="block";
 }
 
-function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
-function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
+// تحديث كمية عنصر في السلة
+function updateQty(idx,value){ 
+  value=parseInt(value); 
+  if(value<=0) delete cart[idx]; 
+  else cart[idx]=value; 
+  updateCartCount(); 
+  saveCart();
+  showTotal(); 
+}
+
+// إزالة عنصر من السلة
+function removeItem(idx){ 
+  delete cart[idx]; 
+  updateCartCount(); 
+  saveCart();
+  showTotal(); 
+}
+
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
+// إرسال الطلب عبر واتساب
 document.getElementById("sendBtn").onclick = function(){
   const orderDiv = document.getElementById("orderNumbers");
   orderDiv.style.display="block";
@@ -412,6 +140,7 @@ document.getElementById("cartBtn").onclick=showTotal;
 document.getElementById("totalBtn").onclick=showTotal;
 document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
 
+// فحص المنتجات الجديدة
 function checkNewProducts(){
   const today=(new Date()).toISOString().split("T")[0];
   let newCount=0;
@@ -426,11 +155,13 @@ function checkNewProducts(){
   }
 }
 
+// البحث في المنتجات
 document.getElementById("searchBox").addEventListener("input", function(){
   const keyword=this.value.trim().toLowerCase();
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
 });
+
+// عند تحميل الصفحة، عرض محتوى السلة
+updateCartCount();
 </script>
-</body>
-</html>
