--- a/products.html
+++ b/products.html
@@ -1,3 +1,245 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>جميع منتجات جنة</title>
+<style>
+body { font-family: Tahoma,sans-serif; margin:0; background:#f9f9f9; }
+
+/* الهيدر */
+header {
+  background: #131921;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+.header-buttons { 
+  margin-top: 10px; 
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: center; 
+  gap:5px;
+}
+.header-buttons button {
+  background: #ffd814;
+  border: 1px solid #fcd200;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+.header-buttons button:hover { background: #f7ca00; }
+
+/* عداد السلة */
+#cart-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
+
+/* زر الجرس */
+#notifBtn {
+  position: relative;
+  background: #ff4444;
+  border: 1px solid #cc0000;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #fff;
+}
+#notif-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: yellow;
+  color: black;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
+
+/* بانر المنتج الجديد */
+#newBanner {
+  display: none;
+  background: red;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+/* مربع البحث */
+#searchBox {
+  display: block;
+  margin: 15px auto;
+  padding: 10px;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+}
+
+/* المنتجات */
+#products-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 12px;
+  padding: 15px;
+}
+.product {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  background: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: 0.3s;
+}
+.product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+.product img {
+  width: 100%;
+  height: 120px;
+  object-fit: contain;
+  margin-bottom: 8px;
+}
+.name { font-size: 16px; margin: 5px 0; color: #333; }
+.price { font-weight: bold; margin-bottom: 5px; }
+.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
+.product button {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+.product button:hover { background: #6a1fbf; transform: scale(1.05); }
+
+/* نافذة اجمالي الفاتورة */
+#totalModal {
+  display: none;
+  position: fixed;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  background: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 3px 15px rgba(0,0,0,0.3);
+  text-align: center;
+  z-index: 1002;
+  width: 90%;
+  max-width: 400px;
+  max-height: 80%;
+  overflow-y: auto;
+}
+#totalModal h2 {
+  font-size: 20px;
+  margin-bottom: 15px;
+  color: #8a2be2;
+}
+#totalModal button {
+  margin: 5px;
+  padding: 8px 15px;
+  border: none;
+  border-radius: 10px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+#totalModal button:hover { background: #6a1fbf; }
+
+/* قائمة السلة */
+#cartList { text-align: right; margin-bottom: 10px; }
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 0;
+}
+.cart-item span { margin: 0 5px; }
+.cart-item button { padding: 2px 8px; font-size: 14px; }
+
+/* الأرقام تحت بعض */
+#orderNumbers a {
+  display: block;
+  margin: 5px 0;
+  font-size: 16px;
+  color: #8a2be2;
+  font-weight: bold;
+  text-decoration: none;
+}
+#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
+
+/* Toast */
+#toast {
+  position: fixed;
+  bottom: 20px; right: 20px;
+  background: #25d366;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  display: none;
+  z-index: 1003;
+}
+</style>
+</head>
+<body>
+
+<header>
+  📦 جميع منتجات جنة
+  <div class="header-buttons">
+    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
+    <button id="totalBtn">💰 إجمالي الفاتورة</button>
+    <button id="supportBtn">☎️ الدعم الفني</button>
+    <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
+    <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
+  </div>
+  <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
+</header>
+
+<div id="newBanner">🎉 منتجات جديدة اليوم!</div>
+<div id="products-container"></div>
+
+<div id="totalModal">
+  <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+  <div id="cartList"></div>
+  <button id="sendBtn">📤 إرسال عبر واتساب</button>
+  <button onclick="closeTotalModal()">❌ إغلاق</button>
+  <div id="orderNumbers" style="margin-top:10px; display:none;">
+    <p>اختر رقم لإرسال الطلب 👇</p>
+    <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
+    <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
+    <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
+  </div>
+</div>
+
+<div id="toast">تمت الإضافة إلى السلة</div>
+
 <script defer>
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
@@ -5,8 +247,14 @@ let productsData = [];
 let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
 // حفظ السلة تلقائياً
-function saveCart() {
-  localStorage.setItem("cart", JSON.stringify(cart));
+function saveCart() { localStorage.setItem("cart", JSON.stringify(cart)); }
+
+// تحديث عداد السلة
+function updateCartCount(){
+  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
+  const badge = document.getElementById("cart-count");
+  badge.style.display = count>0?"inline-block":"none";
+  badge.innerText = count;
 }
 
 // عرض المنتجات
@@ -16,12 +264,10 @@ function renderProducts(data){
       const item = data[i];
       html += `<div class="product">
                   <img src="${item.image || 'https://via.placeholder.com/150'}">
-                  <div class="product-info">
-                    <div class="name">${item.name}</div>
-                    <div class="price">${item.price} جنيه</div>
-                    <input type="number" min="1" value="1" data-index="${i}">
-                    <button onclick="addToCart(${i})">أضف إلى السلة</button>
-                  </div>
+                  <div class="name">${item.name}</div>
+                  <div class="price">السعر: ${item.price} جنيه</div>
+                  <input type="number" min="1" value="1" data-index="${i}">
+                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
                </div>`;
   }
   container.innerHTML = html;
@@ -43,22 +289,7 @@ function renderProducts(data){
    } catch(err){ console.log("❌ خطأ في جلب المنتجات:",err); }
 })();
 
-function showToast(msg){
-  const toast = document.getElementById("toast");
-  toast.innerText = msg;
-  toast.style.display = "block";
-  setTimeout(()=>toast.style.display="none",1200);
-}
-
-// تحديث عداد السلة ووضعه فوق الزر
-function updateCartCount(){
-  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
-  const badge = document.getElementById("cart-count");
-  badge.style.display = count>0?"inline-block":"none";
-  badge.innerText = count;
-}
-
-// إضافة منتج للسلة
+// إضافة للسلة
 function addToCart(index){
   const input = container.querySelector(`input[data-index='${index}']`);
   const quantity = parseInt(input.value);
@@ -69,7 +300,7 @@ function addToCart(index){
   showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
 }
 
-// عرض إجمالي الفاتورة
+// عرض الفاتورة
 function showTotal(){
   let total=0;
   const cartList=document.getElementById("cartList");
@@ -82,10 +313,9 @@ function showTotal(){
       const div=document.createElement("div");
       div.className="cart-item";
       div.innerHTML=`<span>${productsData[idx].name}</span>
-                     <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)"></span>
-                     <span>السعر: ${price}</span>
-                     <span>الإجمالي: ${lineTotal}</span>
-                     <span><button class="remove-btn" onclick="removeItem(${idx})">حذف</button></span>`;
+                     <span>السعر: ${price} × 
+                     <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${lineTotal}</strong> جنيه</span>
+                     <button onclick="removeItem(${idx})">حذف</button>`;
       cartList.appendChild(div);
     }
   });
@@ -93,7 +323,7 @@ function showTotal(){
   document.getElementById("totalModal").style.display="block";
 }
 
-// تحديث كمية عنصر في السلة
+// تعديل الكمية
 function updateQty(idx,value){ 
   value=parseInt(value); 
   if(value<=0) delete cart[idx]; 
@@ -103,7 +333,7 @@ function updateQty(idx,value){
   showTotal(); 
 }
 
-// إزالة عنصر من السلة
+// حذف عنصر
 function removeItem(idx){ 
   delete cart[idx]; 
   updateCartCount(); 
@@ -113,6 +343,14 @@ function removeItem(idx){
 
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
+// Toast
+function showToast(msg){
+  const toast = document.getElementById("toast");
+  toast.innerText = msg;
+  toast.style.display = "block";
+  setTimeout(()=>toast.style.display="none",1200);
+}
+
 // إرسال الطلب عبر واتساب
 document.getElementById("sendBtn").onclick = function(){
   const orderDiv = document.getElementById("orderNumbers");
@@ -120,27 +358,27 @@ document.getElementById("sendBtn").onclick = function(){
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
       e.preventDefault();
-      let text="🧾 طلبية جديدة\n\n";
+      let text="طلبية:%0A%0A";
       let total=0;
       cart.forEach((qty,idx)=>{
         if(qty){
-          const price=productsData[idx].price;
-          const lineTotal=qty*price;
+          const lineTotal=qty*productsData[idx].price;
           total+=lineTotal;
-          text+=`${productsData[idx].name} | ${qty} | ${price} | ${lineTotal}\n`;
+          text+=`${productsData[idx].name} × ${qty} = ${lineTotal} جنيه%0A`;
         }
       });
-      text+=`المجموع الكلي: ${total} جنيه`;
-      window.open(`${a.href}?text=${encodeURIComponent(text)}`,"_blank");
+      text+=`%0Aالمجموع الكلي: ${total} جنيه`;
+      window.open(`${a.href}?text=${text}`,"_blank");
     }
   });
 }
 
+// أزرار الهيدر
 document.getElementById("cartBtn").onclick=showTotal;
 document.getElementById("totalBtn").onclick=showTotal;
 document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
 
-// فحص المنتجات الجديدة
+// إشعارات المنتجات الجديدة
 function checkNewProducts(){
   const today=(new Date()).toISOString().split("T")[0];
   let newCount=0;
@@ -155,7 +393,7 @@ function checkNewProducts(){
   }
 }
 
-// البحث في المنتجات
+// البحث
 document.getElementById("searchBox").addEventListener("input", function(){
   const keyword=this.value.trim().toLowerCase();
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
@@ -165,3 +403,5 @@ document.getElementById("searchBox").addEventListener("input", function(){
 // عند تحميل الصفحة، عرض محتوى السلة
 updateCartCount();
 </script>
+</body>
+</html>
