--- a/products.html
+++ b/products.html
@@ -224,7 +224,7 @@ header {
   font-weight: bold;
 }
 
-/* جدول الفاتورة */
+/* جدول الفاتورة - تم التعديل للعرض على الموبايل */
 #cartList-header { 
   display: grid; 
   grid-template-columns: 2fr 1fr 1fr 1fr auto; 
@@ -352,7 +352,7 @@ header {
   background: #6a1fbf;
 }
 
-/* تحسين الموبايل */
+/* تحسين الموبايل - تم التعديل لتحسين عرض الفاتورة */
 @media (max-width: 480px){
   body { font-size: 13px; }
   
@@ -390,15 +390,53 @@ header {
   .modal-content {
     padding: 12px;
     margin: 10px auto;
+    width: 95%;
   }
   
+  /* تحسينات لعرض الفاتورة على الموبايل */
   #cartList-header, #cartList {
-    grid-template-columns: 2fr 1fr 1fr;
-    font-size: 12px;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    gap: 5px;
   }
   
   .cart-item-hide-on-mobile {
     display: none;
+  }
+  
+  .cart-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5px;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .cart-item span:nth-child(1) {
+    grid-column: 1 / span 2;
+    text-align: center;
+    font-weight: bold;
+    padding-bottom: 5px;
+  }
+  
+  .cart-item span:nth-child(2)::before {
+    content: "الكمية: ";
+    font-weight: bold;
+  }
+  
+  .cart-item span:nth-child(3)::before {
+    content: "السعر: ";
+    font-weight: bold;
+  }
+  
+  .cart-item span:nth-child(4)::before {
+    content: "الإجمالي: ";
+    font-weight: bold;
+  }
+  
+  .cart-item .remove-btn {
+    grid-column: 1 / span 2;
+    margin-top: 5px;
   }
   
   .modal-buttons button {
@@ -423,6 +461,24 @@ header {
   .header-buttons button {
     font-size: 11px;
     padding: 4px 6px;
+  }
+  
+  /* تحسينات إضافية للشاشات الصغيرة */
+  .modal-content {
+    padding: 10px;
+  }
+  
+  .cart-item {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  
+  .cart-item span:nth-child(1) {
+    grid-column: 1;
+  }
+  
+  .cart-item .remove-btn {
+    grid-column: 1;
   }
 }
 </style>
@@ -453,7 +509,7 @@ header {
     <button class="modal-close" onclick="closeTotalModal()">×</button>
     <h2>إجمالي الفاتورة: <span id="totalAmount">0.00</span> جنيه</h2>
 
-    <div id="cartList-header">
+    <div id="cartList-header" class="cart-item-hide-on-mobile">
       <span>المنتج</span>
       <span>الكمية</span>
       <span class="cart-item-hide-on-mobile">السعر</span>
@@ -554,19 +610,38 @@ function showTotal(){
   let total=0;
   const cartList=document.getElementById("cartList");
   cartList.innerHTML="";
+  
+  // إخفاء رأس الجدول على الموبايل
+  const isMobile = window.innerWidth <= 480;
+  document.getElementById("cartList-header").style.display = isMobile ? "none" : "grid";
+  
   cart.forEach((qty,idx)=>{
     if(qty){
       const price = parseFloat(productsData[idx].price);
       const lineTotal = qty*price;
       total+=lineTotal;
-      const div=document.createElement("div");
-      div.className="cart-item";
-      div.innerHTML=`<span>${productsData[idx].name}</span>
-                     <span>${qty}</span>
-                     <span class="cart-item-hide-on-mobile">${formatPrice(price)}</span>
-                     <span>${formatPrice(lineTotal)}</span>
-                     <span><button class="remove-btn" onclick="removeItem(${idx})">حذف</button></span>`;
-      cartList.appendChild(div);
+      
+      if (isMobile) {
+        // عرض مخصص للجوال
+        const div=document.createElement("div");
+        div.className="cart-item";
+        div.innerHTML=`<span>${productsData[idx].name}</span>
+                       <span>${qty}</span>
+                       <span>${formatPrice(price)}</span>
+                       <span>${formatPrice(lineTotal)}</span>
+                       <span><button class="remove-btn" onclick="removeItem(${idx})">حذف</button></span>`;
+        cartList.appendChild(div);
+      } else {
+        // عرض عادي للكمبيوتر
+        const div=document.createElement("div");
+        div.className="cart-item";
+        div.innerHTML=`<span>${productsData[idx].name}</span>
+                       <span>${qty}</span>
+                       <span class="cart-item-hide-on-mobile">${formatPrice(price)}</span>
+                       <span>${formatPrice(lineTotal)}</span>
+                       <span><button class="remove-btn" onclick="removeItem(${idx})">حذف</button></span>`;
+        cartList.appendChild(div);
+      }
     }
   });
   document.getElementById("totalAmount").innerText=formatPrice(total);
@@ -640,6 +715,13 @@ document.getElementById("offerBtn").onclick = function(e){
     const offers = productsData.filter(p => p.offer && p.offer.trim() !== "");
     renderProducts(offers);
 }
+
+// إعادة رسم الفاتورة عند تغيير حجم النافذة
+window.addEventListener('resize', function() {
+  if (document.getElementById("totalModal").style.display === 'block') {
+    showTotal();
+  }
+});
 </script>
 </body>
 </html>
